--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,35 +11,37 @@ img {
 }
 
 body {
-  background-color:#24292e;
-  font-family: "Kumbh Sans", sans-serif;  
-  text-align: center;    
+  background-color: #24292e;
+  font-family: "Kumbh Sans", sans-serif;
+  text-align: center;
   padding-bottom: 100px;
 }
 
 main {
-  display: flex;  
+  display: flex;
   justify-content: center;
   flex-direction: column;
-  padding: 50px 0 0;      
+  padding: 50px 0 0;
 }
 
-.github-icon{
+.github-icon {
   margin-bottom: 30px;
 }
 
-.devicon-github-original{
+.devicon-github-original {
   font-size: 60px;
   color: #FFFFFF;
 }
 
-.section{
+.section {
   padding: 70px 0;
 }
 
 .container {
-  width: 60%; /* se for uma tela menor que 980px vai se adaptar a 70% */
-  max-width: 960px; /* quando chegar em 980px para de aumentar */
+  width: 60%;
+  /* se for uma tela menor que 980px vai se adaptar a 70% */
+  max-width: 960px;
+  /* quando chegar em 980px para de aumentar */
   box-shadow: rgba(0, 0, 0, 0.3) 0px 25px 50px -12px;
   background-color: #fff;
   display: flex;
@@ -77,7 +79,7 @@ main {
   font-size: 17px;
   margin: 20px auto 0;
   padding: 10px;
-  border-radius: 7px;  
+  border-radius: 7px;
   cursor: pointer;
   border: 1px solid grey;
 }
@@ -88,71 +90,109 @@ main {
   border-color: #ffffff;
 }
 
-.container .profile-data{
+.container .profile-data {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 40px;  
+  padding: 40px;
 }
 
 .container .profile-data .info {
-  display: flex;  
+  display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
 
-.container .profile-data .info .data{
+.container .profile-data .info .data {
   padding: 40px;
   width: 50%;
 }
 
-.container .profile-data .info img{
+.container .profile-data .info img {
   width: 50%;
   border-radius: 50%;
   border: 10px solid hotpink;
 }
 
-.container .profile-data .info h1{
+.container .profile-data .info h1 {
   font-size: 20px;
   margin-bottom: 20px;
   font-weight: 700;
 }
 
-.container .profile-data .info p{
-  font-size: 15px;  
+.container .profile-data .info p {
+  font-size: 15px;
   font-weight: 400;
   line-height: 23px;
 }
 
+.container .profile-data .info h4 {
+  margin-bottom: 10px;
+}
+
 /* REPOSITORIES */
 
-.container .profile-data .repositories h2{
+.container .profile-data .repositories h2 {
   margin-bottom: 30px;
   text-align: center;
 }
 
-.container .profile-data .repositories ul{
+.container .profile-data .repositories ul {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.container .profile-data .repositories ul li a{
+.container .profile-data .repositories ul li a {
   padding: 20px;
-  border: 1px solid grey;  
+  border: 1px solid grey;
   margin: 20px;
   display: block;
   border-radius: 7px;
   transition: 0.3s ease-in-out;
 }
 
-.container .profile-data .repositories ul li a:hover{
-  background-color:hotpink;
+.container .profile-data .repositories ul li a:hover {
+  background-color: hotpink;
   color: #fff
 }
 
-.container .profile-data.hide{
+.container .profile-data.hide {
   display: none;
+}
+
+.events {
+  background-color: rgb(231, 231, 231);
+}
+
+.events.section {
+  padding: 30px 50px;
+}
+
+.events h2 {
+  font-weight: 700;
+  color: rgb(77, 77, 77);
+}
+
+.event-list {
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.event-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 10px;
+}
+
+.event-item p {
+  color: rgb(77, 77, 77);
+}
+
+.events h3 a{
+  font-weight: 700;
 }
 
 @media (max-width: 1280px) {
@@ -173,25 +213,24 @@ main {
 }
 
 @media (max-width: 768px) {
+
   .container header #input-search,
-  .container header #btn-search
-  {
+  .container header #btn-search {
     width: 100%;
   }
 }
 
 @media (max-width: 425px) {
   main {
-    padding: 15% 0;    
+    padding: 15% 0;
   }
 
-  .container .profile-data .info img{
+  .container .profile-data .info img {
     margin-bottom: 20px;
   }
 
   .container .profile-data .info img,
-  .container .profile-data .info .data
-  {
+  .container .profile-data .info .data {
     width: 100%;
     padding: 0;
   }
