--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -144,7 +144,7 @@ main {
 }
 
 .container .profile-data .repositories ul li a {
-  padding: 20px;
+  padding: 15px;
   border: 1px solid grey;
   margin: 20px;
   display: block;
@@ -155,6 +155,20 @@ main {
 .container .profile-data .repositories ul li a:hover {
   background-color: hotpink;
   color: #fff
+}
+
+.container .profile-data .repositories ul li a .repository-info {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 5px;
+  gap: 10px;
+}
+
+.container .profile-data .repositories ul li a .repository-info li {
+  background-color: rgb(140, 91, 219);
+  padding: 3px;
+  border-radius: 3px;
+  color: #fff;
 }
 
 .container .profile-data.hide {
